--- a/linux/buildroot_conf.config
+++ b/linux/buildroot_conf.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2023.02-236-g7c01d5a1bb Configuration
+# Buildroot 2023.05-git Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -326,7 +326,7 @@ BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_LZCAT="lzip -d -c"
 BR2_TAR_OPTIONS=""
-BR2_DEFCONFIG="/home/parallels/buildroot/configs/qemu_riscv64_virt_defconfig"
+BR2_DEFCONFIG="/home/parallels/Desktop/idk/buildroot/configs/qemu_riscv64_virt_defconfig"
 BR2_DL_DIR="$(TOPDIR)/dl"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
@@ -349,9 +349,9 @@ BR2_STRIP_EXCLUDE_DIRS=""
 # BR2_OPTIMIZE_0 is not set
 # BR2_OPTIMIZE_1 is not set
 # BR2_OPTIMIZE_2 is not set
-BR2_OPTIMIZE_3=y
+# BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_G is not set
-# BR2_OPTIMIZE_S is not set
+BR2_OPTIMIZE_S=y
 # BR2_OPTIMIZE_FAST is not set
 # BR2_ENABLE_LTO is not set
 
@@ -461,8 +461,9 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.43"
 BR2_LINUX_KERNEL_VERSION="5.15.43"
 BR2_LINUX_KERNEL_PATCH=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
-# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+# BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="linux_conf.config"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=""
 BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH=""
 BR2_LINUX_KERNEL_IMAGE=y
@@ -3445,12 +3446,11 @@ BR2_TARGET_ROOTFS_INITRAMFS=y
 #
 # BR2_TARGET_BAREBOX is not set
 BR2_TARGET_OPENSBI=y
-# BR2_TARGET_OPENSBI_LATEST_VERSION is not set
-BR2_TARGET_OPENSBI_CUSTOM_VERSION=y
+BR2_TARGET_OPENSBI_LATEST_VERSION=y
+# BR2_TARGET_OPENSBI_CUSTOM_VERSION is not set
 # BR2_TARGET_OPENSBI_CUSTOM_TARBALL is not set
 # BR2_TARGET_OPENSBI_CUSTOM_GIT is not set
-BR2_TARGET_OPENSBI_CUSTOM_VERSION_VALUE="1.2"
-BR2_TARGET_OPENSBI_VERSION="1.2"
+BR2_TARGET_OPENSBI_VERSION="0.9"
 BR2_TARGET_OPENSBI_PLAT="generic"
 # BR2_TARGET_OPENSBI_INSTALL_DYNAMIC_IMG is not set
 BR2_TARGET_OPENSBI_INSTALL_JUMP_IMG=y
